sandbox-codebase/objects/heymarket__Sync_Result__c/heymarket__Sync_Result__c.object-meta.xml
<CustomObject>
    <description>It will store sync status details for each record processed in sync.</description>
    <label>Sync Result</label>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Sync Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>