sandbox-codebase/objects/heymarket__Sync_Result__c/fields/heymarket__Job__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Job__c</fullName>
    <description>Job__c</description>
    <label>Job</label>
    <referenceTo>heymarket__Job__c</referenceTo>
    <relationshipLabel>Sync Results</relationshipLabel>
    <relationshipName>Sync_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>