sandbox-codebase/objects/heymarket__Sync_Result__c/fields/heymarket__Reason__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Reason__c</fullName>
    <description>Reason if record failed to sync</description>
    <label>Reason</label>
    <length>200</length>
    <type>Text</type>
</CustomField>