sandbox-codebase/objects/heymarket__Sync_Result__c/fields/heymarket__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Record_Id__c</fullName>
    <description>Account, Contact or Lead id.</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>