sandbox-codebase/objects/heymarket__Sync_Result__c/fields/heymarket__Status__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Ignored</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>